--- a/assts/asst01.html
+++ b/assts/asst01.html
@@ -19,13 +19,14 @@
 <li><a href="#_sign_up_for_github">2. Sign-up for Github</a></li>
 <li><a href="#_read_the_class_web_pages">3. Read the class web pages</a></li>
 <li><a href="#_hello_c">4. Hello C</a></li>
-<li><a href="#_optional_set_up_your_own_development_environment">5. (Optional) Set up your own development environment</a>
+<li><a href="#_optional_set_up_a_remote_development_environment_with_our_server_goldengate">5. (Optional) Set up a remote development environment with our server goldengate</a></li>
+<li><a href="#_optional_set_up_your_own_local_development_environment">6. (Optional) Set up your own local development environment</a>
 <ul class="sectlevel2">
-<li><a href="#_windows">5.1. Windows</a></li>
-<li><a href="#_macos">5.2. MacOS</a></li>
+<li><a href="#_windows">6.1. Windows</a></li>
+<li><a href="#_macos">6.2. MacOS</a></li>
 </ul>
 </li>
-<li><a href="#_grading_rubric">6. Grading Rubric</a></li>
+<li><a href="#_grading_rubric">7. Grading Rubric</a></li>
 </ul>
 </div>
 </div>
@@ -315,10 +316,34 @@ Check the Github website to make sure that your program uploaded correctly.</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_optional_set_up_your_own_development_environment">5. (Optional) Set up your own development environment</h2>
+<h2 id="_optional_set_up_a_remote_development_environment_with_our_server_goldengate">5. (Optional) Set up a remote development environment with our server goldengate</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Having your own development environment will allow you to write code outside of lab.</p>
+<p>A remote development environment will allow you to run code from goldengate, a remote
+server, from within an integrated development environment.</p>
+</div>
+<div class="paragraph">
+<p>For this option, your need to use VS Code with the Remote-SSH extension to VS Code.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://code.visualstudio.com/">VS Code</a></p>
+</li>
+<li>
+<p><a href="https://code.visualstudio.com/docs/remote/ssh">Remote SSH Tutorial</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_optional_set_up_your_own_local_development_environment">6. (Optional) Set up your own local development environment</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>A local development environment allows you to write code on your own desktop or
+laptop. With a local development environment, you will be able to run your code even
+after you graduate from college.</p>
 </div>
 <div class="admonitionblock note">
 <table>
@@ -327,13 +352,14 @@ Check the Github website to make sure that your program uploaded correctly.</p>
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
-All programs must run on the lab&#8217;s Linux environment. Make sure you test your work on the lab machines if you work on your laptop!
+All programs must run on the lab&#8217;s Linux environment. Make sure you test
+your work on the lab machines if you work on your laptop!
 </td>
 </tr>
 </table>
 </div>
 <div class="sect2">
-<h3 id="_windows">5.1. Windows</h3>
+<h3 id="_windows">6.1. Windows</h3>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
@@ -419,7 +445,7 @@ A quick way to open powershell is to type &lt;WindowsKey&gt;-'Q' and type 'power
 </div>
 </div>
 <div class="sect2">
-<h3 id="_macos">5.2. MacOS</h3>
+<h3 id="_macos">6.2. MacOS</h3>
 <div class="paragraph">
 <p>From terminal, run command <code>xcode-select --install</code></p>
 </div>
@@ -455,7 +481,7 @@ A quick way to open terminal is to use spotlight. From the keyboard, type the &l
 </div>
 </div>
 <div class="sect1">
-<h2 id="_grading_rubric">6. Grading Rubric</h2>
+<h2 id="_grading_rubric">7. Grading Rubric</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p><strong>Assignment rubrics</strong></p>
@@ -507,7 +533,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-09-04 12:45:12 -0400
+Last updated 2024-09-04 16:32:16 -0400
 </div>
 </div>
 </body>
